k8s/user-management/overlays/local/patches/userDeploymentPatch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management
spec:
  template:
    metadata:
      labels:
        io.kompose.network/user-api: "true"
