k8s/user-management/overlays/local/patches/pgadminIngressPatch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localhost
  namespace: user-management
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: pgadmin
            port:
              number: 5050
        path: /
        pathType: Prefix
